app/static/app/css/main.scss
html{
    height: 100%;
}

#navbar-top{
    height: 50px;
    min-height: 50px;
    background-color: #18bc9c;
    z-index: 999999;

    .navbar-header{
        width: 100%;
    }

    .navbar-brand{
        height: auto;
        padding: 8px;
    }
    .navbar-text{
        margin-top: 14px;
        margin-left: 4px;
    }
    
    .navbar-link:hover{
        color: white;
        text-decoration: none;
    }

    .navbar-top-links{
        clear: both;
        a.dropdown-toggle{
            color: white;
        }

        a:hover, a:focus, .open>a{
            background-color: #2c3e50;
        }
    }


    ul#side-menu{
        a:hover, a:focus{
            color: white;
            text-decoration: none;
            background-color: #2c3e50;
        }

        li{
            word-break: break-word;
        }
    }

    .navbar-top-links li a.dropdown-toggle{
        height: 50px;
    }

    .user-profile{
        padding: 0 8px;

        .email{
            font-size: 90%;
            color: gray;
        }
    }
}

ul#side-menu.nav{
    a{
        color: #111;
        word-break: break-all;
    }
}

.content{
    clear: both;
    h1,h2,h3,h4,h5{
        padding-top: 4px;
        margin-top: 0;
    }
}

.top-buffer { 
    margin-top: 15px; 
}

.navbar-default{
    background-color: white;
}

.alert{
    margin-bottom: 10px;
}

.modal-dialog{
    z-index: 999999;
}

.pagination{
    margin: 0;

    li>a{
        color: black;
        border: 1px solid #ecf0f1;
        background-color: #fff;
        &:hover, &:focus{
            background-color: #798d8f;
        }
    }
    .disabled > a{
        background-color: #fff;
        border: 1px solid #f4f9f5;
        &:hover, &:focus{
            background-color: #fff;
            border: 1px solid #f4f9f5;
        }
    }
    .active > a{
        background-color: #798d8f;
        &:hover, &:focus{
            background-color: #798d8f;
        }
    }  

    &.pagination-sm{
        a{
            padding-top: 2px;
            padding-bottom: 2px;
        }
    }
}

table.table-first-col-bold{
    td:first-child{
        font-weight: bold;
    }
}

button i.glyphicon{
    margin-right: 4px;
}

.btn.btn-secondary{
    background-color: #dddddd;
}

.dropdown-menu>li>a{
    padding-left: 10px;
    .fa, .glyphicon{
        margin-right: 4px;
    }
}

